# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.32

  - WL#15468, Upgrade 3rd party libraries and tools.

  - WL#15411, Upgrade Protocol Buffers dependency to protobuf-java-3.21.9.

  - Fix for Bug#108414 (Bug#34578541), Malformed packet generation for `COM_STMT_EXECUTE`.
    Thanks to Seongman Yang for his contribution.

  - Fix for Bug#106252 (Bug#33968169), Connector/J client hangs after prepare & execute process with old version server.
    Thanks to Zhe Huang for his contribution.

  - Fix for Bug#34725725, RPM and DEB builds broken after introducing javadoc for maven bundles.

  - Fix for Bug#108814 (Bug#34717205), Contribution: Fix name of relocation POM file.
    Thanks to Henning Pöttker for his contribution.

  - WL#15437, Sonatype compliant POM and maven bundles.

  - Fix for Bug#106981 (Bug#34059340), Contribution: [PATCH] Remove superfluous use of boxing.
    Thanks to Andrey Turbanov for his contribution.

  - Fix for Bug#108419 (Bug#34578010), Contribution: Recognize "ON DUPLICATE KEY UPDATE" in "INSERT SET" Statement.
    Thanks to Yamasaki Tadashi for his contribution.

Version 8.0.31

  - Fix for Bug#33637993, Loss of backslashes in data after modify api is used.

  - Fix for Bug#34529014, JSonParser not accepting valid JSON string when converting to DbDoc.

  - Fix for Bug#67828 (Bug#15967406), Crashing applets due to reading file.encoding system property.

  - WL#15259, Review maven publishing process.

  - Fix for Bug#107222 (Bug#34150112), ClientPreparedStatement.toString() no longer interpolates byte arrays.

  - Fix for Bug#104753 (Bug#33286177), PreparedStatement.setFetchSize(0) causes ArrayIndexOutOfBoundsException.

Version 8.0.30

  - Fix for Bug#107510 (Bug#34259416), Empty string given to set() from Collection.modify() replaces full document.

  - Fix for Bug#106758 (33973048), DatabaseMetaData.getTypeInfo returns AUTO_INCREMENT = false for all datatypes.
